# lazyft

./: .dockerignore  .env.example  .gitignore  .readthedocs.yaml  Dockerfile  Dockerfile.custom  README.md  alembic.ini  backtest_and_hyperopt_example.ipynb  build.sh  celery.ipynb  data_analysis.ipynb  dataranges.ipynb  docker-compose.yml  download-data.sh  example.ipynb  install-packages.sh  lazyft.ipynb  mkdocs.yml  prof.html  pyproject.toml  range_detection.ipynb  regime-detector.ipynb  remotes.json  requirements.txt  setup.py  sqlmodelscratch.ipynb  start_celery.sh  sync.sh  tasks.json  tradesv3.dryrun.sqlite  update-freqtrade.sh
coin_based_strategy/: setup.py
coin_based_strategy/cbs/: __init__.py  mapper.py  populator.py
coin_based_strategy/tests/: test_all.py
configs/: config.json
docker_scripts/: entrypoint.sh
docs/: conf.py  lazyft.backtest.rst
docs/source/: conf.py  index.rst  lazyft.cli.rst  lazyft.rst  modules.rst  requirements.txt
easyft/: manage.py  setup.py
easyft/easyft/: __init__.py  auto-opt.ipynb  backtest.py  config.py  confirm.py  constants.py  hyperopt.py  main.py  manage2.py  pairlist_hyperopt.py  remote.py  strategy.py  study.py  util.py
easyft/easyft.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
easyft/lazyft/: __init__.py  constants.py  parameters.py  runner.py  strategy.py
easyft/quicktools/: backtest.py  config.py  hyperopt.py  quick_tools.py  regex.py
examples/: .env.example  backtest_and_hyperopt_example.ipynb
exports/: BatsContest-$100.0-120_days-1692.csv  BatsContest-$100.0-121_days-1682.csv  ClucHAnix_BB_RPB_MOD-$100.0-121_days-911.csv  bats_no_trailing.csv  bats_trailing.csv  trades.csv
indicatormix/: README.md  requirements.txt  setup.py
indicatormix/indicatormix/: __init__.py  advanced_optimizer.py  condition_tools.py  conditions.py  constants.py  custom_exceptions.py  defaults.py  indicator_depot.py  indicator_opt.py  indicators.py  main.py  misc.py  parameter_tools.py  populator.py  series.py  util.py
lazyft/: __init__.py  command.py  command_parameters.py  config.py  data_loader.py  downloader.py  ensemble.py  errors.py  lft_settings.py  log_config.py  loss_functions.py  models.py  notify.py  pairlist.py  parameter_tools.py  paths.py  plot.py  regex.py  remote.py  reports.py  reports_old.py  restapi.py  runner.py  space_handler.py  strategy.py  util.py
lazyft/backtest/: __init__.py  commands.py  runner.py
lazyft/cli/: backtest.py  cli.py  hyperopt.py  remote.py  space_handlerify.py
lazyft/combo_optimization/: __init__.py  combo_optimizer.py  errors.py  requirements.py  stats.py
lazyft/defaults/: config.json
lazyft/hyperopt/: __init__.py  commands.py  runner.py
lazyft/models/: __init__.py  backtest.py  base.py  hyperopt.py  remote.py  strategy.py
lazyft_pkg/: manage.py  requirements.txt  setup.py
lazyft_pkg/defaults/: config.json
lazyft_pkg/lazyft/: __init__.py  command.py  command_parameters.py  config.py  constants.py  database.py  downloader.py  ensemble.py  errors.py  log_config.py  models.py  (+15 more)
lft_rest/: requirements.txt  setup.py
migrations/: env.py  script.py.mako
scripts/: combo.py  list_strats.py  refresh_pairlist.py  run_backtest.py  run_hyperopt.py
tests/: test_backtest.py  test_combo_opt.py  test_hyperopt.py  test_hyperopt_new_export.py  test_main.py
(+595 files in other folders)
