[tool.poetry]
name = "LazyFT"
version = "0.1.0"
description = "A convenient FreqTrade wrapper-library that makes it easy to develop algorithmic trading strategies."
authors = ["Raphael Nanje"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.1"
loguru = "^0.6.0"
pandas = "1.4.2"
sh = "^1.14.2"
attrs = "^21.4.0"
rich = "^12.4.4"
rapidjson = "^1.0.0"
numpy = "1.22.4"
python-dateutil = "2.8.2"
python-dotenv = "^0.20.0"
pydantic = "^1.9.1"
diskcache = "^5.4.0"
finta = "^1.3"
sqlmodel = "^0.0.6"
plotly = "^5.8.0"
alive-progress = "^2.4.1"
appdirs = "^1.4.4"
nest-asyncio = "^1.5.5"
pandas-ta = "0.3.14b"
ccxt = "1.84.39"
cryptography = "37.0.2"
aiohttp = "3.8.1"
SQLAlchemy = "1.4.36"
python-telegram-bot = "13.12"
cachetools = "4.2.2"
requests = "2.27.1"
urllib3 = "1.26.9"
jsonschema = "4.5.1"
TA-Lib = "0.4.24"
technical = "1.3.0"
tabulate = "0.8.9"
pycoingecko = "2.2.0"
Jinja2 = "3.1.2"
tables = "3.7.0"
blosc = "1.10.6"
joblib = "1.1.0"
py-find-1st = "1.1.5"
python-rapidjson = "1.6"
orjson = "3.6.8"
sdnotify = "0.3.2"
fastapi = "0.78.0"
uvicorn = "0.17.6"
PyJWT = "2.4.0"
aiofiles = "0.8.0"
psutil = "5.9.1"
colorama = "0.4.4"
questionary = "1.10.0"
prompt-toolkit = "3.0.29"
schedule = "1.1.0"
"pushbullet.py" = "^0.12.0"


[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
ipykernel = "^6.13.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  # Exclude vendor directory
  | vendor
)
'''

[tool.isort]
line_length = 100
multi_line_output = 0
lines_after_imports = 2
skip_glob = [
  "**/.env*",
  "**/env/*",
  "**/.venv/*",
  "**/docs/*",
  "**/user_data/*",
  "**/__init__.py",
]
